--- a/tenants/ai-example/single-model-serving-vllm/test/granite-test.ipynb
+++ b/tenants/ai-example/single-model-serving-vllm/test/granite-test.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "def rest_request(prompt):\n",
     "    json_data = {\n",
-    "        \"model\": \"/mnt/models/\",\n",
+    "        \"model\": \"granite\",\n",
     "        \"prompt\": [\n",
     "            prompt\n",
     "        ],\n",
@@ -127,7 +127,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9",
+   "display_name": "3.11.7",
    "language": "python",
    "name": "python3"
   },
@@ -141,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
